--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,15 @@
 	<artifactId>integration-tests</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>integration-tests</name>
+	<properties>
 
+	<spring-version>4.1.6.RELEASE</spring-version>
+	<spring-data-version>1.7.2.RELEASE</spring-data-version>
+	<hibernate-version>4.3.8.Final</hibernate-version>
+	<h2-version>1.4.186</h2-version>
+	</properties>
 	<dependencies>		
             <!-- Spring -->
-	<spring-version>4.1.6.RELEASE</spring-version>		
 	<dependency>
 <groupId>org.springframework</groupId>
 <artifactId>spring-context</artifactId>
@@ -29,7 +34,8 @@
 <artifactId>spring-test</artifactId>
 <version>${spring-version}</version>
 <scope>test</scope>
-</dependency>
+</dependency>	
+	
         <!-- Test -->
 		
         <dependency>
@@ -40,11 +46,7 @@
         </dependency>
 
         <!-- Persistence -->
-		
-	<spring-data-version>1.7.2.RELEASE</spring-data-version>
-<hibernate-version>4.3.8.Final</hibernate-version>
-<h2-version>1.4.186</h2-version>
-<dependency>
+		<dependency>
 <groupId>org.springframework.data</groupId>
 <artifactId>spring-data-jpa</artifactId>
 <version>${spring-data-version}</version>
@@ -59,6 +61,7 @@
 <artifactId>h2</artifactId>
 <version>${h2-version}</version>
 </dependency>
+
         <!-- Logging -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
